HVAC Backup 2/objects/Associated_Warehouse__c.object
<CustomObject>
    <fields>
        <fullName>Branch_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch Department</label>
        <referenceTo>Branch_Division__c</referenceTo>
        <relationshipLabel>Associated Warehouses</relationshipLabel>
        <relationshipName>Associated_Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Associated Warehouses</relationshipLabel>
        <relationshipName>Associated_Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Associated Warehouses</relationshipLabel>
        <relationshipName>Associated_Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse_Code__c</fullName>
        <formula>Warehouse__r.Warehouse_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warehouse Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Associated Warehouses</relationshipLabel>
        <relationshipName>Associated_Warehouses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Associated Warehouse</label>
    <nameField>
        <displayFormat>AW-{0000}</displayFormat>
        <label>Associated Warehouse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>